Actividad 1 tema 1 terminada

--- a/Tema 1/MetodosNoSupervisados_NotebookTarea1.ipynb
+++ b/Tema 1/MetodosNoSupervisados_NotebookTarea1.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "MetodosNoSupervisados-NotebookTarea1.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -51,15 +36,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 67,
       "metadata": {
         "id": "RcszE7CjRB_A"
       },
+      "outputs": [],
       "source": [
         "import scipy.spatial.distance as dist\n",
         "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -72,15 +57,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 68,
       "metadata": {
         "id": "hGvCA_XbUFDN"
       },
+      "outputs": [],
       "source": [
         "def distancia_euclidea(x1:float, x2:float):\n",
-        "  #COMPLETAR\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  #COMPLETAR\n",
+        "\n",
+        "  # Comprobamos que los dos vectores tengan el mismo tamaño\n",
+        "  if len(x1) != len(x2):\n",
+        "    print(\"Error. La longitud de los vectores tiene que ser la misma\")\n",
+        "    return -1\n",
+        "\n",
+        "  distance = np.sqrt(np.sum([(x_1 - x_2)**2 for x_1, x_2 in zip(x1, x2)]))\n",
+        "\n",
+        "  return distance\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -93,15 +87,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 69,
       "metadata": {
         "id": "g6LMgb0YUurd"
       },
+      "outputs": [],
       "source": [
         "x1 = [1.5, 0.4, 3.5, 4.9, 2.2, 10.4, 5.1, 3.8, 0.1, 3.9]\n",
         "x2 = [0.3, 5.4, 8.2, 9.8, 2.2, 8.3, 9.2, 4.1, 7.2, 1.1]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -114,14 +108,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 70,
       "metadata": {
         "id": "dEr4nj8iVeY7"
       },
-      "source": [
-        "#COMPLETAR"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "12.33288287465668\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "print(distancia_euclidea(x1, x2))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -134,14 +137,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 71,
       "metadata": {
         "id": "wXC3Y1WfVz-o"
       },
-      "source": [
-        "#COMPLETAR"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "12.33288287465668\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "print(dist.euclidean(x1, x2))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,15 +166,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 72,
       "metadata": {
         "id": "kS7cjCoCWdZD"
       },
+      "outputs": [],
       "source": [
         "def distancia_manhattan(x1:float, x2:float):\n",
-        "  #COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  #COMPLETAR\n",
+        "\n",
+        "  # Comprobamos que los dos vectores tengan el mismo tamaño\n",
+        "  if len(x1) != len(x2):\n",
+        "    print(\"Error. La longitud de los vectores tiene que ser la misma\")\n",
+        "    return -1\n",
+        "\n",
+        "  distance = np.sum([abs(x_1 - x_2) for x_1, x_2 in zip(x1, x2)])\n",
+        "\n",
+        "  return distance"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -175,14 +196,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 73,
       "metadata": {
         "id": "1NbOEidPXHd3"
       },
-      "source": [
-        "#COMPLETAR"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "32.2\n",
+            "32.2\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "print(distancia_manhattan(x1, x2))\n",
+        "\n",
+        "print(dist.cityblock(x1, x2))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -195,16 +228,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 74,
       "metadata": {
         "id": "AIKdcsM4XlZO"
       },
+      "outputs": [],
       "source": [
         "def similitud_coseno(x1:float, x2:float):\n",
         "  #COMPLETAR\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  \n",
+        "  simil = np.dot(x1, x2) / (np.linalg.norm(x1) * np.linalg.norm(x2))\n",
+        "\n",
+        "  return simil"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -217,15 +253,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 75,
       "metadata": {
         "id": "gw8mesEwZXVV"
       },
+      "outputs": [],
       "source": [
         "def distancia_coseno(x1:float, x2:float):\n",
-        "  #COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  #COMPLETAR\n",
+        "\n",
+        "  # Comprobamos que los dos vectores tengan el mismo tamaño\n",
+        "  if len(x1) != len(x2):\n",
+        "    print(\"Error. La longitud de los vectores tiene que ser la misma\")\n",
+        "    return -1\n",
+        "  \n",
+        "  return 1 - similitud_coseno(x1, x2)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -238,14 +281,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 76,
       "metadata": {
         "id": "sWESZB2gaM_o"
       },
-      "source": [
-        "#COMPLETAR\n"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.19421684022747399\n",
+            "0.1942168402274741\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "print(distancia_coseno(x1, x2))\n",
+        "\n",
+        "print(dist.cosine(x1, x2))\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -267,15 +322,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 77,
       "metadata": {
         "id": "Nq9NN3tIdSmO"
       },
+      "outputs": [],
       "source": [
         "def distancia_hamming(x1:int, x2:int):\n",
-        "  #COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  #COMPLETAR\n",
+        "\n",
+        "  # Comprobamos que los dos vectores tengan el mismo tamaño\n",
+        "  if len(x1) != len(x2):\n",
+        "    print(\"Error. La longitud de los vectores tiene que ser la misma\")\n",
+        "    return -1\n",
+        "  \n",
+        "  return np.sum([x_1 != x_2 for x_1, x_2 in zip(x1, x2)]) / len(x1)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -288,15 +350,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 78,
       "metadata": {
         "id": "zG2kxWwUeacj"
       },
+      "outputs": [],
       "source": [
         "x1 = [0,0,1,0,1,1,0,1,1,0]\n",
         "x2 = [0,1,1,0,1,0,0,0,1,1]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -309,14 +371,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 79,
       "metadata": {
         "id": "LRmWrq8le5Hg"
       },
-      "source": [
-        "#COMPLETAR"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.4\n",
+            "0.4\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "print(distancia_hamming(x1, x2))\n",
+        "\n",
+        "print(dist.hamming(x1, x2))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -329,15 +403,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 80,
       "metadata": {
         "id": "9wYtgRGrgCOP"
       },
+      "outputs": [],
       "source": [
         "def similitud_discreta(x1:int, x2:int, w:int):\n",
-        "  #COMPLETAR\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  #COMPLETAR\n",
+        "\n",
+        "  par_cor = np.sum([x_1 == x_2 for x_1, x_2 in zip(x1, x2)])\n",
+        "\n",
+        "  par_discor = np.sum([x_1 != x_2 for x_1, x_2 in zip(x1, x2)])\n",
+        "\n",
+        "  return par_cor / (par_cor + w * par_discor)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -350,14 +430,53 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 81,
       "metadata": {
         "id": "PiFDtVv6goEL"
       },
-      "source": [
-        "#COMPLETAR"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.6\n",
+            "0.6\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "\n",
+        "print(similitud_discreta(x1, x2, 1))\n",
+        "\n",
+        "\n",
+        "# Ya que 1 - similitud = distancia_hamming, cuando w=1, entonces, similitud = 1 - distancia_hamming\n",
+        "print(1 - distancia_hamming(x1, x2))\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "MetodosNoSupervisados-NotebookTarea1.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
