Distancia Hamming cambiada

--- a/Tema 1/MetodosNoSupervisados_NotebookTarea1.ipynb
+++ b/Tema 1/MetodosNoSupervisados_NotebookTarea1.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 1,
       "metadata": {
         "id": "RcszE7CjRB_A"
       },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 2,
       "metadata": {
         "id": "hGvCA_XbUFDN"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 3,
       "metadata": {
         "id": "g6LMgb0YUurd"
       },
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 4,
       "metadata": {
         "id": "dEr4nj8iVeY7"
       },
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 5,
       "metadata": {
         "id": "wXC3Y1WfVz-o"
       },
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 6,
       "metadata": {
         "id": "kS7cjCoCWdZD"
       },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 7,
       "metadata": {
         "id": "1NbOEidPXHd3"
       },
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 8,
       "metadata": {
         "id": "AIKdcsM4XlZO"
       },
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 9,
       "metadata": {
         "id": "gw8mesEwZXVV"
       },
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 10,
       "metadata": {
         "id": "sWESZB2gaM_o"
       },
@@ -322,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 11,
       "metadata": {
         "id": "Nq9NN3tIdSmO"
       },
@@ -335,8 +335,12 @@
         "  if len(x1) != len(x2):\n",
         "    print(\"Error. La longitud de los vectores tiene que ser la misma\")\n",
         "    return -1\n",
+        "\n",
+        "  par_cor = np.sum([x_1 == x_2 for x_1, x_2 in zip(x1, x2)])\n",
+        "\n",
+        "  par_discor = np.sum([x_1 != x_2 for x_1, x_2 in zip(x1, x2)])\n",
         "  \n",
-        "  return np.sum([x_1 != x_2 for x_1, x_2 in zip(x1, x2)]) / len(x1)"
+        "  return par_discor / (par_discor + par_cor)"
       ]
     },
     {
@@ -350,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 12,
       "metadata": {
         "id": "zG2kxWwUeacj"
       },
@@ -371,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 13,
       "metadata": {
         "id": "LRmWrq8le5Hg"
       },
@@ -403,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 14,
       "metadata": {
         "id": "9wYtgRGrgCOP"
       },
@@ -411,6 +415,11 @@
       "source": [
         "def similitud_discreta(x1:int, x2:int, w:int):\n",
         "  #COMPLETAR\n",
+        "\n",
+        "  # Comprobamos que los dos vectores tengan el mismo tamaño\n",
+        "  if len(x1) != len(x2):\n",
+        "    print(\"Error. La longitud de los vectores tiene que ser la misma\")\n",
+        "    return -1\n",
         "\n",
         "  par_cor = np.sum([x_1 == x_2 for x_1, x_2 in zip(x1, x2)])\n",
         "\n",
@@ -430,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 15,
       "metadata": {
         "id": "PiFDtVv6goEL"
       },
@@ -448,7 +457,6 @@
         "#COMPLETAR\n",
         "\n",
         "print(similitud_discreta(x1, x2, 1))\n",
-        "\n",
         "\n",
         "# Ya que 1 - similitud = distancia_hamming, cuando w=1, entonces, similitud = 1 - distancia_hamming\n",
         "print(1 - distancia_hamming(x1, x2))\n"
