Tarea2 not finished

--- a/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb
+++ b/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb
@@ -91,7 +91,6 @@
         "\n",
         "    numerator += n_clus[key].count(most_common)\n",
         "\n",
-        "  \n",
         "  return numerator / len(particion_obtenida)\n"
       ]
     },
@@ -276,8 +275,6 @@
         "\n",
         "  fn = tp_fn - tp\n",
         "\n",
-        "  tn = comb(len(A), 2) - tp - fp - fn\n",
-        "\n",
         "  return np.sqrt((tp / (tp + fn)) * (tp / (tp + fp)))"
       ]
     },
@@ -368,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 56,
       "metadata": {
         "id": "Nq9NN3tIdSmO"
       },
@@ -399,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 57,
       "metadata": {
         "id": "iUfvVuxtupKn"
       },
@@ -408,12 +405,24 @@
         "def wss(datos:list, particion:int):\n",
         "  # COMPLETAR\n",
         "  wss_sum = 0\n",
-        "  \n",
-        "  centroid = calcular_centroide(datos)\n",
         "\n",
-        "  for cl in datos:\n",
-        "    \n",
-        "    wss_sum += np.sum(suma_cuadrado(cl, centroid))\n",
+        "  groups = np.unique(particion)\n",
+        "\n",
+        "  for grp in groups:\n",
+        "\n",
+        "    # Recogemos los indices de los puntos de cada grupo\n",
+        "    points_grp = [i for i,x in enumerate(particion) if x == grp]\n",
+        "\n",
+        "    # Seleccionamos los puntos\n",
+        "    data_grp = list(np.array(datos)[points_grp])\n",
+        "\n",
+        "    # Calculamos el centroide del grupo\n",
+        "    centroid = calcular_centroide(data_grp)\n",
+        "\n",
+        "    # Calculamos la distancia de cada punto del grupo a su centroide\n",
+        "    for cl in data_grp:\n",
+        "      \n",
+        "      wss_sum += suma_cuadrado(cl, centroid)\n",
         "  \n",
         "  return wss_sum"
       ]
@@ -429,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 58,
       "metadata": {
         "id": "lliNhfTLy7-i"
       },
@@ -465,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 59,
       "metadata": {
         "id": "zG2kxWwUeacj"
       },
@@ -474,7 +483,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "35.95965780170993\n"
+            "31.920505779961665\n"
           ]
         }
       ],
@@ -494,26 +503,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 63,
       "metadata": {
         "id": "LRmWrq8le5Hg"
       },
       "outputs": [],
       "source": [
         "def bss(datos:list, particion:int):\n",
-        "  from scipy.cluster.vq import vq\n",
+        "  bss_sum = 0\n",
         "\n",
-        "  partition, euc_distance_to_centroids = vq(datos, particion)\n",
-        "  \n",
-        "  # COMPLETAR\n",
-        "  B = []\n",
-        "  c = datos.mean(0)\n",
-        "  for i in range(particion.max()+1):\n",
-        "      ci = datos[particion == i].mean(0)\n",
-        "      B.append(np.bincount(particion)[i]*np.sum((ci - c)**2))\n",
-        "  SSB_ = np.sum(B)\n",
+        "  groups = np.unique(particion)\n",
         "\n",
-        "  return SSB_"
+        "  # Calculamos punto medio del conjunto de datos\n",
+        "  m_centroid = calcular_centroide(datos)\n",
+        "\n",
+        "  for grp in groups:\n",
+        "\n",
+        "    # Recogemos los indices de los puntos de cada grupo\n",
+        "    points_grp = [i for i,x in enumerate(particion) if x == grp]\n",
+        "\n",
+        "    # Seleccionamos los puntos\n",
+        "    data_grp = list(np.array(datos)[points_grp])\n",
+        "\n",
+        "    # Calculamos el centroide del grupo\n",
+        "    i_centroid = calcular_centroide(data_grp)\n",
+        "\n",
+        "    # Calculamos distanca del centroide del grupo al centroide del conjunto de datos, \n",
+        "    # multiplicándolo por el tamaño del grupo\n",
+        "    bss_sum += len(data_grp) * suma_cuadrado(m_centroid, i_centroid)\n",
+        "\n",
+        "  return bss_sum"
       ]
     },
     {
@@ -527,23 +546,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 64,
       "metadata": {
         "id": "9wYtgRGrgCOP"
       },
       "outputs": [
         {
-          "ename": "ValueError",
-          "evalue": "observation and code should have same number of dimensions",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[1;32m/Users/juanjomendeztorrero/code/Master Ciencia de datos/MNSDA/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb Cell 35'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000034?line=0'>1</a>\u001b[0m res_bss \u001b[39m=\u001b[39m bss(datos, particion)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000034?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(res_bss)\n",
-            "\u001b[1;32m/Users/juanjomendeztorrero/code/Master Ciencia de datos/MNSDA/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb Cell 33'\u001b[0m in \u001b[0;36mbss\u001b[0;34m(datos, particion)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000032?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbss\u001b[39m(datos:\u001b[39mlist\u001b[39m, particion:\u001b[39mint\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000032?line=1'>2</a>\u001b[0m   \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcluster\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvq\u001b[39;00m \u001b[39mimport\u001b[39;00m vq\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000032?line=3'>4</a>\u001b[0m   partition, euc_distance_to_centroids \u001b[39m=\u001b[39m vq(datos, particion)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000032?line=5'>6</a>\u001b[0m   \u001b[39m# COMPLETAR\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/juanjomendeztorrero/code/Master%20Ciencia%20de%20datos/MNSDA/Tema%202/MetodosNoSupervisados_NotebookTarea2.ipynb#ch0000032?line=6'>7</a>\u001b[0m   B \u001b[39m=\u001b[39m []\n",
-            "File \u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/mnsda-master-GIL4ZqMl-py3.9/lib/python3.9/site-packages/scipy/cluster/vq.py:208\u001b[0m, in \u001b[0;36mvq\u001b[0;34m(obs, code_book, check_finite)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/juanjomendeztorrero/Library/Caches/pypoetry/virtualenvs/mnsda-master-GIL4ZqMl-py3.9/lib/python3.9/site-packages/scipy/cluster/vq.py?line=204'>205</a>\u001b[0m c_code_book \u001b[39m=\u001b[39m code_book\u001b[39m.\u001b[39mastype(ct, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    <a href='file:///Users/juanjomendeztorrero/Library/Caches/pypoetry/virtualenvs/mnsda-master-GIL4ZqMl-py3.9/lib/python3.9/site-packages/scipy/cluster/vq.py?line=206'>207</a>\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39missubdtype(ct, np\u001b[39m.\u001b[39mfloat64) \u001b[39mor\u001b[39;00m np\u001b[39m.\u001b[39missubdtype(ct, np\u001b[39m.\u001b[39mfloat32):\n\u001b[0;32m--> <a href='file:///Users/juanjomendeztorrero/Library/Caches/pypoetry/virtualenvs/mnsda-master-GIL4ZqMl-py3.9/lib/python3.9/site-packages/scipy/cluster/vq.py?line=207'>208</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m _vq\u001b[39m.\u001b[39;49mvq(c_obs, c_code_book)\n\u001b[1;32m    <a href='file:///Users/juanjomendeztorrero/Library/Caches/pypoetry/virtualenvs/mnsda-master-GIL4ZqMl-py3.9/lib/python3.9/site-packages/scipy/cluster/vq.py?line=208'>209</a>\u001b[0m \u001b[39mreturn\u001b[39;00m py_vq(obs, code_book, check_finite\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-            "File \u001b[0;32m_vq.pyx:209\u001b[0m, in \u001b[0;36mscipy.cluster._vq.vq\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: observation and code should have same number of dimensions"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "16.316670078708334\n"
           ]
         }
       ],
@@ -565,14 +577,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "PiFDtVv6goEL"
       },
       "outputs": [],
       "source": [
         "def distancia_punto_grupo(punto:float, grupo:list):\n",
-        "  # COMPLETAR"
+        "  # COMPLETAR\n",
+        "  \n",
+        "  distances = []\n",
+        "\n",
+        "  for pnt in grupo:\n",
+        "\n",
+        "    distances.append(dist.euclidean(punto, pnt))\n",
+        "\n",
+        "  return np.mean(distances)"
       ]
     },
     {
@@ -586,14 +606,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "id": "27wAy4R68VAN"
       },
       "outputs": [],
       "source": [
         "def silhouette_punto(punto:float, datos:list, particion:int, indice:int):\n",
-        "  # COMPLETAR"
+        "  # COMPLETAR\n",
+        "\n",
+        "  # Recogemos los indices de los puntos del mismo cluster que el punto dado\n",
+        "  points_grp = [i for i,x in enumerate(particion) if x == particion[indice]]\n",
+        "\n",
+        "  # Seleccionamos los puntos\n",
+        "  data_grp = list(np.array(datos)[points_grp])\n",
+        "\n",
+        "  # Calculamos la distancia del punto a todos los puntos del mismo grupo\n",
+        "  a = distancia_punto_grupo(punto, data_grp)\n",
+        "\n",
+        "  # Recogemos los indices de los puntos del mismo cluster que el punto dado\n",
+        "  points_not_grp = [i for i,x in enumerate(particion) if x != particion[indice]]\n",
+        "\n",
+        "  # Seleccionamos los puntos\n",
+        "  data_not_grp = list(np.array(datos)[points_not_grp])\n",
+        "\n",
+        "  b = distancia_punto_grupo(punto, data_not_grp)\n",
+        "\n",
+        "  return (b-a) / max(a, b)"
       ]
     },
     {
@@ -607,14 +646,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "id": "1hoR3iao8Zn3"
       },
       "outputs": [],
       "source": [
         "def silhoutte_particion(datos:list, particion:int):\n",
-        "  # COMPLETAR"
+        "  # COMPLETAR\n",
+        "\n",
+        "  sil_score = 0\n",
+        "\n",
+        "  for i in range(len(datos)):\n",
+        "\n",
+        "    sil_score += silhouette_punto(datos[i], datos, particion, i)\n",
+        "  \n",
+        "  return sil_score / len(datos)   "
       ]
     },
     {
@@ -628,14 +675,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
         "id": "OY6_9Dn_8eQt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.23506484697879132\n",
+            "-0.12527718550104788\n"
+          ]
+        }
+      ],
       "source": [
-        "# COMPLETAR"
+        "# COMPLETAR\n",
+        "\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "\n",
+        "print(silhoutte_particion(datos, particion))\n",
+        "\n",
+        "print(silhouette_score(datos, particion, metric=\"euclidean\"))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
