--- a/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb
+++ b/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {
         "id": "RcszE7CjRB_A"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {
         "id": "hGvCA_XbUFDN"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 3,
       "metadata": {
         "id": "g6LMgb0YUurd"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 4,
       "metadata": {
         "id": "dEr4nj8iVeY7"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {
         "id": "q0wx5QJiikYu"
       },
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 6,
       "metadata": {
         "id": "fsNJYm6Ujtqc"
       },
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 7,
       "metadata": {
         "id": "P-DmyZvej7JZ"
       },
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 8,
       "metadata": {
         "id": "2gbjpA6HmABc"
       },
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 9,
       "metadata": {
         "id": "wSXsUXZMm1ra"
       },
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 10,
       "metadata": {
         "id": "EimWUKIgm_Xv"
       },
@@ -329,7 +329,7 @@
               "0.29814239699997197"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 11,
       "metadata": {
         "id": "Nq9NN3tIdSmO"
       },
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 12,
       "metadata": {
         "id": "iUfvVuxtupKn"
       },
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 13,
       "metadata": {
         "id": "lliNhfTLy7-i"
       },
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 14,
       "metadata": {
         "id": "zG2kxWwUeacj"
       },
@@ -503,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 15,
       "metadata": {
         "id": "LRmWrq8le5Hg"
       },
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 16,
       "metadata": {
         "id": "9wYtgRGrgCOP"
       },
@@ -577,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 17,
       "metadata": {
         "id": "PiFDtVv6goEL"
       },
@@ -606,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 46,
       "metadata": {
         "id": "27wAy4R68VAN"
       },
@@ -624,15 +624,25 @@
         "  # Calculamos la distancia del punto a todos los puntos del mismo grupo\n",
         "  a = distancia_punto_grupo(punto, data_grp)\n",
         "\n",
-        "  # Recogemos los indices de los puntos del mismo cluster que el punto dado\n",
-        "  points_not_grp = [i for i,x in enumerate(particion) if x != particion[indice]]\n",
+        "  # Calculamos la distancia al resto de grupos\n",
+        "  groups = list(np.unique(particion))\n",
+        "  \n",
+        "  groups.remove(particion[indice])\n",
         "\n",
-        "  # Seleccionamos los puntos\n",
-        "  data_not_grp = list(np.array(datos)[points_not_grp])\n",
+        "  b = []  \n",
         "\n",
-        "  b = distancia_punto_grupo(punto, data_not_grp)\n",
+        "  for grp in groups:\n",
         "\n",
-        "  return (b-a) / max(a, b)"
+        "    points_not_grp = [i for i,x in enumerate(particion) if x == grp]\n",
+        "\n",
+        "    # Seleccionamos los puntos no pertenecientes al grupo del punto\n",
+        "    data_not_grp = list(np.array(datos)[points_not_grp])\n",
+        "\n",
+        "    # Insertamos la distancia del punto al grupo que no pertenece\n",
+        "    b.append(distancia_punto_grupo(punto, data_not_grp))\n",
+        "\n",
+        "  # Devolvemos el valor usando el valor mínimo de b, ya que es la distancia al grupo más cercano\n",
+        "  return (min(b)-a) / max(a, min(b))"
       ]
     },
     {
@@ -646,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 47,
       "metadata": {
         "id": "1hoR3iao8Zn3"
       },
@@ -655,13 +665,13 @@
         "def silhoutte_particion(datos:list, particion:int):\n",
         "  # COMPLETAR\n",
         "\n",
-        "  sil_score = 0\n",
+        "  sil_score = []\n",
         "\n",
         "  for i in range(len(datos)):\n",
         "\n",
-        "    sil_score += silhouette_punto(datos[i], datos, particion, i)\n",
+        "    sil_score.append(silhouette_punto(datos[i], datos, particion, i))\n",
         "  \n",
-        "  return sil_score / len(datos)   "
+        "  return np.mean(sil_score)"
       ]
     },
     {
@@ -675,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 48,
       "metadata": {
         "id": "OY6_9Dn_8eQt"
       },
@@ -684,7 +694,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.23506484697879132\n",
+            "0.14789914075897975\n",
             "-0.12527718550104788\n"
           ]
         }
@@ -696,7 +706,7 @@
         "\n",
         "print(silhoutte_particion(datos, particion))\n",
         "\n",
-        "print(silhouette_score(datos, particion, metric=\"euclidean\"))"
+        "print(silhouette_score(datos, particion, metric=\"euclidean\", random_state=0))"
       ]
     },
     {
@@ -727,7 +737,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.8.9"
     }
   },
   "nbformat": 4,
